--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@dataview/datav-vue3": "0.0.0-test.1672506674342",
+    "@kjgl77/datav-vue3": "^1.7.2",
+    "axios": "^1.6.8",
+    "echarts": "^5.5.0",
+    "mockjs": "^1.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
